Add methods to service, add migration and messages